--- a/frontend/src/components/Board/components/List/list.css
+++ b/frontend/src/components/Board/components/List/list.css
@@ -1,7 +1,8 @@
 .List {
   border: 1px solid gray;
-  margin: 0.5% 1% 1%;
+  border-radius: 10px;
   display: flex;
-  justify-content: space-between;
-  padding: 0.75%;
+  padding: 15px;
+  width: 275px;
+  margin: 15px;
 }
