--- a/frontend/src/components/CreateList/createList.css
+++ b/frontend/src/components/CreateList/createList.css
@@ -1,23 +1,45 @@
 .createList {
-  border: 1px solid gray;
+  border-bottom: 1px solid gray;
   margin: 1% 1%;
   align-items: center;
 }
 
 .form-create{
   margin: 0.5% 1% 1%;
+  display: flex;
+  justify-content: center;
 }
 
 .form-create label{
-  display: block;
-  margin: 1% 1% 1% 0;
-}
-
-.form-create label:nth-child(1){
-  margin: 1% 1% 0 0;
-}
-
-.form-wrap {
   display: flex;
-  justify-content: space-between;
+  margin-right: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1rem;
+  line-height: 20px;
+  align-items: center;
+}
+
+.form-create button {
+  margin: 5px;
+  background-color: white;
+  border: 2px dashed gray;
+  padding: 6px 35px;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.buttonCreateList {
+  margin: 5px;
+  background-color: white;
+  border: 2px dashed gray;
+  padding: 6px 35px;
+  height: 32px;
+  cursor: pointer;
+  font-size: 15px;
+  color: black;
+}
+
+.buttonCreateList:focus{
+  box-shadow: 0 0 0 2px rgb(13 110 253 / 50%);
+  border-radius: 2px;
 }
