--- a/frontend/src/common/Input/input.css
+++ b/frontend/src/common/Input/input.css
@@ -5,7 +5,7 @@
   height: 30px;
   font-family: 'Roboto', sans-serif;
   background: none;
-  border: 2px solid lightgrey;
+  border: 2px solid #D3D2DA;
   font-size: 1rem;
 }
 
