--- a/frontend/src/components/CreateTask/createTask.css
+++ b/frontend/src/components/CreateTask/createTask.css
@@ -1,26 +1,33 @@
-.createList {
-  border-bottom: 1px solid #D3D2DA;
+.createTask {
+  border: 2px solid #D3D2DA;
   margin: 1% 1%;
+  padding: 3%;
   align-items: center;
 }
 
-.form-create {
+.form-task {
   margin: 0.5% 1% 1%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.form-create label{
+.form-task label{
   display: flex;
-  margin-right: 15px;
+  margin-left: 5px;
   font-family: 'Roboto', sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.0rem;
   line-height: 20px;
   align-items: center;
 }
+.form-task > .myInput{
+width: 94%;
+padding: 0 0px;
+margin: 4px 5px 0 5px;
+}
 
-.buttonCreateList {
+.buttonCreateTask {
   margin: 5px;
   background-color: white;
   border: 2px dashed #D3D2DA;
@@ -29,9 +36,10 @@
   cursor: pointer;
   font-size: 15px;
   color: black;
+  width: 95%;
 }
 
-.buttonCreateList:focus{
+.buttonCreateTask:focus{
   box-shadow: 0 0 0 2px rgb(13 110 253 / 50%);
   border-radius: 2px;
 }
