--- a/frontend/src/components/ModalWnd/modalWnd.css
+++ b/frontend/src/components/ModalWnd/modalWnd.css
@@ -7,6 +7,37 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.Board-list {
-margin: 15px 0 15px 15px;
+.Modal-wrap {
+  max-width: 550px;
+  width: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  border-radius: 15px;
+}
+
+.ModalWnd i {
+  position: fixed;
+  right: 15px;
+  color: white;
+  cursor: pointer;
+  font-size: 28px;
+}
+
+.Modal-header {
+  width: 100%;
+  height: 40px;
+  background-color: #5A647D;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+
+}
+
+
+.Modal-content {
+
+  padding: 1rem;
+
 }
